@@ -1,5 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
+- Bugfix: quaternion::slerp now uses lerpN instead of lerp to keep result normalized.
+- Add function quaternion::lerpN which is like lerp but normalizes the result.
 - Add function ISceneManager::createShadowVolumeSceneNode to allow custom ISceneNode's to use shadows.
 - CGUITabControl serialization changed to allow using custom tabs (before only CGUITab could be serialized). 
   There was a lot of rewriting involved, including some minor interface changes (IGUITab*  can now be added directly for example).
